--- a/index.html
+++ b/index.html
@@ -13,40 +13,40 @@
     <header class="header">
         <div class="header__logo">
             <img class="header__logo_mainLogo" src="./partners/logo.png">
-            <img class="header__logo_mobileProfilePic" src="https://s101sas.storage.yandex.net/rdisk/142365e537926e4cad9ee7a7dca13ef49678b2a795a5b4b8f601512eb0bbb46b/648b2e9b/5lC24BXf20a7OvJbYrGiueA_Qu7-eZavZKBMmZdZtf36bpv_Akx76Oo503-GPDz2Lo_mhv27HfgUoVlK8hD6sA==?uid=0&filename=Profile.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&owner_uid=0&fsize=637&hid=71c460a4c528d50c9b4afbd09ef6fd7b&media_type=image&tknv=v2&etag=3541c1857ca17787310d25b7255e9cb8&rtoken=H6PZpmZNcJll&force_default=no&ycrid=na-080342df57b1628d09d226e66c3539c2-downloader15f&ts=5fe2cbfe49cc0&s=5cea9aa72c8f355207137738a75aa76cde4a5e1eeaeb8e9e3ae1e58a3c1746a7&pb=U2FsdGVkX1-m5N3Yvar1eeJEqqQicliNkYA4I8Xj-9_4Jn3MmIHJvPO7BZSd6q1zopbqc9cZOc2OE_GtpWGW-qsEc1GKjRkwLIeJYKeodY4">
+            <img class="header__logo_mobileProfilePic" src="./partners/Profile.png">
         </div>
         <span class="header__search">
-            <img class="header__search_image" src="https://s577sas.storage.yandex.net/rdisk/bead801b06f2ac6a27b3da3d647d38627250f4dc9058283dbd34e9f73fb0a423/648b2e60/5lC24BXf20a7OvJbYrGiuYvojRFQaA3YLLAty1zXKSY2rTsjIBjHdJ_eKGcJzm4SllBfqNs6YKrzKVJWVhcliw==?uid=0&filename=search.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&owner_uid=0&fsize=486&hid=80e88b61df7d8912086c6e156e9c9805&media_type=image&tknv=v2&etag=49967ec26c855d58c50e73767c535dd3&rtoken=TUSkXY5DfJb6&force_default=no&ycrid=na-6ef99f225fc2e36db92e00d54104a6a7-downloader15f&ts=5fe2cbc605800&s=430bc6e159802751ba22e417e8dee1477b35aa9894679543c135fd3002a28752&pb=U2FsdGVkX1_toVhktGtLS-qvcuTxOCNDWO17IhFC4DQ0LfmRL6KCZ24YUN1xsmC1Vpsk-bpdy7ecNP88XgA8AaStfi07cglqc1xeqsqZ_PY">
+            <img class="header__search_image" src="search.png">
             <input class="header__search_input" type="search" placeholder="Найти...">
         </span>
         <span class="header__userBlock">
             <p class="header__userBlock_userName">Константин</p>
-            <img class="header__userBlock_userPic" src="https://s39vlx.storage.yandex.net/rdisk/54e6fc22d8b3d74e6234afd0d40c62fc235b736405b4b3346ea422e8855ee1d2/648b2e7f/5lC24BXf20a7OvJbYrGiuZt2PHNY8gXLAzf7vKZMQgFSnJKjAYPtpx4pMFG9iG-snnnhc9kMRcB5GtQ-BZD6Xg==?uid=0&filename=user.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&owner_uid=0&fsize=3861&hid=90d36d59f2f08741671061fb7c5d999c&media_type=image&tknv=v2&etag=8f44bb781f9e4ff0a4b08c7085dadf31&rtoken=xSyo3t8zO4sq&force_default=no&ycrid=na-f0c05e50aa113756ff20e80aa5ebb41a-downloader15f&ts=5fe2cbe395dc0&s=b0c66e3689fe412156bddc0ba80a89f5d227881deda844d0b1096cb95a04064d&pb=U2FsdGVkX18mmG03HcHXXU-DyES76oHe7dcxoWdPMh72zdaRN78YNkm7OKW6FON3BXfR54KJrsWfddzZU_OsyqhpCJr9w76vIfA2_CjFhFI">
+            <img class="header__userBlock_userPic" src="user.png">
         </span>
     </header>
     <div class="partners">
         <h1 class="partners__heading">Наши партнеры</h1>
         <div class="partners__logos">
             <div class="partners__logos__item">
-                <img class="partners__logos__item_logo" src="https://s499vla.storage.yandex.net/rdisk/f667ad809cbfadb1fd7099b366abc94ca78c3f66ea5f7bf99a3fae7eb726434d/648b2ece/5lC24BXf20a7OvJbYrGiuUPOUFaqyg8JDJkreMKAUw5bnpAKaqhg7x1C6TgnpEk_gTsqeA0pAC2UneXM-zNpqg==?uid=0&filename=henkel.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&owner_uid=0&fsize=4088&hid=6b44bd1aa569c3cbe05cd5100014ea61&media_type=image&tknv=v2&etag=6bae90330f56f2c6a0b08199899d4258&rtoken=6GwYS6lwcDGb&force_default=no&ycrid=na-72362c9db9964911019cf9540423c5ef-downloader15f&ts=5fe2cc2eecf80&s=0588bff595579443eed6f2d79b9bc807a776e31e0127170b0be4dfb7f6fa8fc0&pb=U2FsdGVkX19obav8qMiA5Us02qhUu1YhZvfjzUWVTQmaAuRhN8HbP7RQ1KD6NyOdDd2Go1vfb9b5yWd5k8tjUSvWtBCW22i-6tJMQU5NR6U">
+                <img class="partners__logos__item_logo" src="./partners/henkel.png">
             </div>
             <div class="partners__logos__item">
-                <img class="partners__logos__item_logo" src="https://s779sas.storage.yandex.net/rdisk/ed1a7347b6a0c2ec74a29f96c96c90c0e7a28ecad8e8e610a0b2335d5708385b/648b2f75/5lC24BXf20a7OvJbYrGiuVB95Oz_3BVjICNm_GzpxXg0l0sAJd_ViGkW6DMnKLx9TBe2kEUkmDvm8Fg8JTiK5w==?uid=118148629&filename=johndeer1.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&owner_uid=118148629&fsize=5814&hid=a0e8299bf9929d1a8d1e33524bf2466a&media_type=image&tknv=v2&etag=121e21ca6cd067ab140e7e47ec5b404f&rtoken=TxaA6DWMbgx7&force_default=yes&ycrid=na-8a671407562cd753b12d6998aadc2aef-downloader11e&ts=5fe2ccce30740&s=24df4c92b29e2bcfa44150bda7b94afc26a5eb0960c875fbf8326d0d9cdbc5e3&pb=U2FsdGVkX1_GZdYsNMzxNe4RhLr2Fi-wxLcd6y6MAC6JSNaCzN5euth3Cc3f_SZN2fJehcm2BoUmJ2kf2J1Ld9PRQMRibp_A1HWH14HrGuM">
+                <img class="partners__logos__item_logo" src="./partners/johndeer.png">
             </div>    
             <div class="partners__logos__item">
-                <img class="partners__logos__item_logo" src="https://s831sas.storage.yandex.net/rdisk/6b8aa0dbd93b886581925337cc1cb5c3afab56dc32176ea1dfe1e4895b282b57/648b2f9f/5lC24BXf20a7OvJbYrGiuSsF_8PdhoELkF1P6xkfH42IAyMvlrxMkWmDEGe5SZfbvSW0xpAyd7gzpE_YWIns4A==?uid=0&filename=McD.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&owner_uid=0&fsize=3738&hid=c16af4e779acb9fb6ceb7185f871de1e&media_type=image&tknv=v2&etag=669f6966c39195c3f2b2ab2208388637&rtoken=6FUgEMSoSxMK&force_default=no&ycrid=na-ccfa8c03c778ad883ed27132c37a7c3e-downloader3h&ts=5fe2ccf63e5c0&s=2d3343bfedefa6e7fa44a4bf3ee72ab7d7ac52a01bc26870713141abf58068a7&pb=U2FsdGVkX19aB3MSp4cagU2hBL8r03-tWJtNdGTQPapFwrLm-AMSHwKhpUn__ulec0VJ4GvUwVyxaPdboDsQPkdl6QPyBapB33K1ziYm-Ps">            
+                <img class="partners__logos__item_logo" src="./partners/McD.png">            
             </div>
             <div class="partners__logos__item">
-                <img class="partners__logos__item_logo" src="https://s248sas.storage.yandex.net/rdisk/e53b1bcefa21e6fa2f216a5b41317fa59bc8990505e31a1053f3a5b0219071df/648b2fb9/5lC24BXf20a7OvJbYrGiuSuSocXD5d92tFLR1tJGYRj2E3iTMr3Jd91pHVJftvU8f7l9ZkHe2tfuMmVo_GTvfQ==?uid=0&filename=ikea.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&owner_uid=0&fsize=4156&hid=7c3bede09e84759bbb25411a4b03e3ca&media_type=image&tknv=v2&etag=8a1acbfcde3080ddafce70837b2fb000&rtoken=Q5OkcEHASjI8&force_default=no&ycrid=na-5e2964dc912e411a90d4cbbfbd5c8a6c-downloader3h&ts=5fe2cd0f0a040&s=39cbcb740f40ae021bae6daefd03256c6eae6746a7bdef581cf4073ce342b3a4&pb=U2FsdGVkX19Men-oTbshDujVQByutGE9uar-UBDeXAm0KgjUVvdcX8KPxJsonbtinjzvP2hXBzR6ZR0mbJ3k_BKPExcqsXq4Rm9OZqecss0">
+                <img class="partners__logos__item_logo" src="./partners/ikea.png">
             </div>    
             <div class="partners__logos__item">
-                <img class="partners__logos__item_logo" src="https://s654sas.storage.yandex.net/rdisk/cab2a47e7153cca29e8b04dde235b0572158f6ff4b5c6b8b0fd13a7f9f961883/648b2fd3/5lC24BXf20a7OvJbYrGiuQBDpwnoNt79KtnsDkYaS4ueEWOeRmK7XuGn_vB5FM95BTWBSFxtI5jcbm7Ot14LnA==?uid=0&filename=reebok.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&owner_uid=0&fsize=7780&hid=f8921d618d08415f60fa82d3c3b10340&media_type=image&tknv=v2&etag=cc19aae15d5860885ede606639b89bc4&rtoken=ET0JJ2FuOQeU&force_default=no&ycrid=na-e0a50ee07a5199a5e8da30389e1fc0a4-downloader3h&ts=5fe2cd27d5ac0&s=c384bdfb8c483327a6d9f3d5fedf81943d63eb780b2669d728ce4a49e1ad1949&pb=U2FsdGVkX18Vffh8o9ASIAvKI0mzhmNRU_T1WWJju0QgWtZfOUm0oFFIwdx5afxH72KedBZ7uB8dfKxccZM61GwRicFRv70Nj--oAFnBGV4">
+                <img class="partners__logos__item_logo" src="./partners/reebok.png">
             </div>    
             <div class="partners__logos__item">
-                <img class="partners__logos__item_logo" src="https://s666sas.storage.yandex.net/rdisk/392338ae6cdbb3f5f8d542c86d24f136cebbe84fa9d737a2a499b776569bed84/648b2ff2/5lC24BXf20a7OvJbYrGiuUs8n5dFR6ZMiEPJ6mtdKSKREZgF_bJ2rcguU0Y23hPpC9rzyQt2b_LXk0rGDH95Uw==?uid=0&filename=nike.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&owner_uid=0&fsize=3772&hid=6713e09acf31c79676080dda3d73a7ac&media_type=image&tknv=v2&etag=e68621e741ddbc2d2e89d0ac901e0b19&rtoken=W8QEcC5Pbc1B&force_default=no&ycrid=na-9354673168e4db4ad2ea307fa22f792b-downloader3h&ts=5fe2cd4566080&s=b53bb3dd9187b87386ff0c26801145de4a31625549228358ee93c6f2544ba5d2&pb=U2FsdGVkX19SPj9GlV5IhjF0h6yNFtaNlNMSFMJursGf3n5-qvFHQJcXsu22Z4DDqnlbdHbbtvS8XtapmnSfpvioucOaQUxq6mmDVgTfHMM">
+                <img class="partners__logos__item_logo" src="./partners/nike.png">
             </div>    
             <div class="partners__logos__item">
-                <img class="partners__logos__item_logo" src="https://s117vlx.storage.yandex.net/rdisk/360fb4147e2c5197c4e868ac522328369cfc9e89a7aa02970c521ca909db3e23/648b3007/5lC24BXf20a7OvJbYrGiucTFDNBpV_A3ySMSpDTRfhWhYm6lRahhEK2QmqP5Ak8UJ2RbseSwl4aroHGQwglA8A==?uid=0&filename=caterpillar.png&disposition=inline&hash=&limit=0&content_type=image%2Fpng&owner_uid=0&fsize=3279&hid=aaf238f0f2b1273d08ae65321729daac&media_type=image&tknv=v2&etag=2be6f147dba681cf26602c46f5a90cd1&rtoken=XuBj2C1ea0Mi&force_default=no&ycrid=na-4d59187255021c3fd53101a8492a233b-downloader3h&ts=5fe2cd596cfc0&s=6b4bdb8adec7c1359afdfc6d2a3ef473b8d845e61d42f74639ccfb378bd42bcb&pb=U2FsdGVkX1-O6-esqwzx9eJ3n_O5ZvIVT2ENtPixYI_cRarsznAMx12JXPyOJxz9Kgm4UY62ffgoVrMHhuad9aP9-qO0jUzQmFth1ptu9Vk">
+                <img class="partners__logos__item_logo" src="./partners/caterpillar.png">
             </div>
         </div>
     </div>
